Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -1,84 +1,63 @@
 - Main.controller.js
 ```java
 sap.ui.define([
-    "sap/ui/core/mvc/Controller", // SAPUI5 MVC 컨트롤러
-    "sap/ui/model/json/JSONModel", // JSON 데이터를 담는 모델
-    "sap/ui/core/Fragment", // UI Fragment (팝업, 모달 등)
-    "sap/btp/ux400solving/model/formatter" // 화면에서 데이터를 포맷팅하는 함수
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment",
+    "sap/btp/ux400solving/model/formatter"
 ], (Controller, JSONModel, Fragment, formatter) => {
     "use strict";
 
     return Controller.extend("sap.btp.ux400solving.controller.Main", {
-        formatFile: formatter, // 포맷터를 컨트롤러에서 사용
-
-        // 1. 초기 실행 시 호출
+        formatFile : formatter,
         onInit() {
-            // 랜덤 숫자를 저장할 배열을 가진 모델 생성
             let oData = {
-                RandomValue: []
+                RandomValue : []
             };
-            let oModel = new JSONModel(oData); 
-            this.getView().setModel(oModel, "RandomModel"); // 뷰에 모델 연결
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel, "RandomModel");
         },
-
-        // 2. '랜덤 숫자 생성' 버튼 클릭 시
         onRandomPress: function() {
-            // 1~100 사이 랜덤 숫자 생성
             let randomData = Math.floor(Math.random() * 100) + 1;
-
-            // Input 필드에 랜덤 숫자 표시
             this.byId("InputRandom").setValue(randomData);
-
-            // 모델에서 기존 랜덤 값 배열 가져오기
             let rData = this.getView().getModel("RandomModel").getProperty("/RandomValue");
+            rData.push({ Random_val : randomData});
 
-            // 새 랜덤 숫자를 배열에 추가
-            rData.push({ Random_val: randomData });
-
-            // 모델 업데이트
             let rModel = this.getView().getModel("RandomModel");
             rModel.setProperty("/RandomValue", rData);
         },
-
-        // 3. '제품 보기' 버튼 클릭 시 다이얼로그 열기
         onOpenProduct: function() {
-            let oModel = this.getView().getModel(); // 메인 모델 가져오기
-            let oDialog = sap.ui.getCore().byId("idDialog"); // 다이얼로그 ID 확인
+            let oModel = this.getView().getModel();
+            let oDialog = sap.ui.getCore().byId("idDialog");
 
-            if (oDialog) { 
-                oDialog.open(); // 이미 다이얼로그가 있으면 바로 열기
-            } else {
-                // 없으면 Fragment를 불러와서 다이얼로그 생성
+            if(oDialog) {
+                oDialog.open();
+            }
+            else {
                 Fragment.load({
-                    name: "sap.btp.ux400solving.view.fragment.Products", // Fragment 경로
+                    name: "sap.btp.ux400solving.view.fragment.Products",
                     type: "XML",
                     controller: this
-                }).then(function(mDialog) {
-                    mDialog.setModel(oModel); // 모델 연결
-                    mDialog.open(); // 다이얼로그 열기
+                }).then( function(mDialog) {
+                    mDialog.setModel(oModel);
+                    mDialog.open();
                 })
             }
         },
-
-        // 4. 다이얼로그 닫기
         onClose: function() {
             sap.ui.getCore().byId("idDialog").close();
         },
-
-        // 5. Input 값 변경 시 이벤트
         onValueChange: function(oEvent) {
-            let iValue = Number(oEvent.getParameter("value")); // 입력 값 가져오기
-            let oInput = oEvent.getSource(); // 입력한 Input 객체
+            let iValue = Number(oEvent.getParameter("value"));
+            let oInput = oEvent.getSource();
 
-            // 1~100 범위 체크
-            if (iValue < 0 || iValue > 100) {
-                oInput.setValueState("Error"); // 오류 표시
-                oInput.setValueStateText("1 이상 100 이하의 숫자를 입력하세요."); // 오류 메시지
-            } else {
-                // 범위 내 값이면 모델에 추가
+            if(iValue < 0 || iValue > 100) {
+                oInput.setValueState("Error");
+                oInput.setValueStateText("1 이상 100 이하의 숫자를 입력하세요.");
+            }
+            else {
                 let rData = this.getView().getModel("RandomModel").getProperty("/RandomValue");
-                rData.push({ Random_val: iValue });
-
+                rData.push({ Random_val : iValue});
                 let rModel = this.getView().getModel("RandomModel");
                 rModel.setProperty("/RandomValue", rData);
             }
@@ -89,8 +68,137 @@ sap.ui.define([
 </br>
 
 - Main.view.xml
+```html
+<mvc:View controllerName="sap.btp.ux400solving.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <VBox class="sapUiLargeMargin">
+            <Text text="버튼을 클릭하면 아래 input에 값이 랜덤으로 채워집니다." />
+            <Input id="InputRandom" value="" type="Number" change=".onValueChange" />
+            <Button text="Random" press=".onRandomPress"/>
+            <!-- 
+                일반적으로 Controller 랑 연결된 함수는 .onPress 랑 onPress 둘 다 가능 (생략가능)
+            -->
+            <t:Table id="idRandomTable" rows="{RandomModel>/RandomValue}" width="50%">
+                <t:extension>
+                    <OverflowToolbar style="Clear">
+                        <Title id="title" text="랜덤 목록 리스트"/>
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column>
+                        <Label text="value" />
+                        <t:template>
+                            <Text text="{RandomModel>Random_val}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+
+            <Button text="open Product" press="onOpenProduct" />
+        </VBox>
+    </Page>
+</mvc:View>
+```
+</br>
 
 - Products.fragment.xml
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:t="sap.ui.table"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idDialog">
+        <content>
+            <t:Table id="idProductsTable" rows="{/Products}">
+                <t:extension>
+                    <OverflowToolbar style="Clear">
+                        <Title id="productTitle" text="Products"/>
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column width="7rem">
+                        <Label text="ProductID" />
+                        <t:template>
+                            <Text text="{ProductID}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="11rem">
+                        <Label text="ProductName" />
+                        <t:template>
+                            <Text text="{ProductName}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="SupplierID" />
+                        <t:template>
+                            <Text text="{SupplierID}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="CategoryID" />
+                        <t:template>
+                            <Text text="{CategoryID}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="11rem">
+                        <Label text="QuantityPerUnit" />
+                        <t:template>
+                            <Text text="{QuantityPerUnit}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="UnitPrice" />
+                        <t:template>
+                            <Text text="{UnitPrice}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="UnitsInStock" />
+                        <t:template>
+                            <Text text="{UnitsInStock}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="UnitsOnOrder" />
+                        <t:template>
+                            <Text text="{UnitsOnOrder}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="ReorderLevel" />
+                        <t:template>
+                            <Text text="{ReorderLevel}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="Discontinued" />
+                        <t:template>
+                            <Text text="{
+                                path : 'Discontinued',
+                                formatter : '.formatFile.transformDiscontinued'
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="7rem">
+                        <Label text="Status" />
+                        <t:template>
+                            <c:Icon src="{= (${UnitPrice} >= 15) ? 'sap-icon://thumb-up' : 'sap-icon://thumb-down' }"
+                                    color="{= (${UnitPrice} >= 15) ? 'rgb(27, 234, 33)' : 'rgb(234, 52, 27)' }" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </content>
+        <endButton>
+            <Button text="닫기" press=".onClose" />
+        </endButton>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
 
 - formatter.js
 ```java
