Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -104,7 +104,7 @@ sap.ui.define([
 ```
 </br>
 
-- Products.fragment.xml
+- fragment/Products.fragment.xml
 ```html
 <c:FragmentDefinition 
     xmlns="sap.m" 
@@ -200,7 +200,7 @@ sap.ui.define([
 ```
 </br>
 
-- formatter.js
+- model/formatter.js
 ```java
 sap.ui.define([], function() {
     "use strict"
