Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -220,3 +220,81 @@ sap.ui.define([], function() {
 })
 ```
 </br>
+</br>
+
+# 실습 코드 (답지)
+- js 파일
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment",
+    "ycl2testproject02/model/formatter"
+
+], (Controller, JSONModel, Fragment, formatter) => {
+    "use strict";
+
+    return Controller.extend("ycl2testproject02.controller.Main", {
+
+        formatFile: formatter,
+
+        onInit() {
+            let oData = { result: [] };
+            let oModel = new JSONModel(oData);
+
+            this.getView().setModel(oModel, "list");
+        },
+
+        onRandomPress() {
+            let oInput = this.getView().byId("inp01");
+            let sValue = Math.floor(Math.random() * 100 + 1);
+            oInput.setValue(sValue);
+
+            let oModel = this.getView().getModel("list");
+            let arrCopy = oModel.getProperty("/result");
+
+            arrCopy.push(sValue);
+            oModel.setProperty("/result", arrCopy);
+
+        },
+
+        onValueChange: function(oEvent) {
+            let oInput = oEvent.getSource();
+            let iValue = oInput.getValue();
+
+            let isValid = true;
+
+            if(iValue < 1 || iValue > 100  || isNaN(iValue) || iValue === "") {
+                isValid = false;
+            }
+
+            if(isValid) {
+                oInput.setValueState("None");
+            } else {
+                oInput.setValueState("Error");
+            }
+
+
+        },
+
+        openProduct() {
+
+            let oThis = this;
+
+            Fragment.load({
+                name: "ycl2testproject02.view.fragment.Products",
+                type: "XML",
+                controller:this,
+            }).then(function(oDialog) {
+                let oModel = oThis.getView().getModel();
+                oDialog.setModel(oModel, "product");
+                oDialog.open();
+            }); 
+        },
+
+        onClose() {
+            sap.ui.getCore().byId("idDialog").close();
+        }
+    });
+});
+```
