--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -298,3 +298,160 @@ sap.ui.define([
     });
 });
 ```
+</br>
+
+- view.xml 파일
+```html
+<mvc:View controllerName="ycl2testproject02.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m"
+    xmlns:t="sap.ui.table"
+>
+    <Page id="page" title="{i18n>title}">
+        <VBox id="box01" class="sapUiLargeMargin">
+            <Text id="txt01" text="버튼을 클릭하면 아래 Input 값이 랜덤으로 채워집니다"></Text>
+            <Input id="inp01" type="Number" change="onValueChange" placeholder="1부터 100까지 입력하세요" valueState="None" valueStateText="1부터 100 사이의 값만 입력할 수 있습니다." />
+            <Button id="btn01" text="Random" press="onRandomPress"></Button>
+
+            <t:Table id="tb01" rows="{list>/result}">
+                <t:extension>
+					<OverflowToolbar style="Clear">
+						<Title id="title01" text="랜덤 목록 리스트"/>
+					</OverflowToolbar>
+				</t:extension>
+
+                <t:columns>
+                	<t:Column width="11rem">
+						<Label text="value" />
+						<t:template>
+							<Text text="{list>}"></Text>
+						</t:template>
+					</t:Column>
+                </t:columns>
+
+            </t:Table>
+
+            <Button id="btn02" text="open Product" press="openProduct"></Button>
+
+        </VBox>
+    </Page>
+</mvc:View>
+```
+</br>
+
+- fragment 파일
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:c="sap.ui.core"
+    xmlns:f="sap.ui.layout.form"
+    xmlns:t="sap.ui.table"
+>
+    <Dialog id="idDialog"
+            title="First Dialog"
+            contentHeight="20%"
+            contentWidth="80%"
+            draggable="true"
+            resizable="true">
+        <content>
+            <!-- Dialog 안에 들어갈 내용 작성 -->
+            <t:Table id="tb02" rows="{product>/Products}">
+                <t:extension>
+					<OverflowToolbar style="Clear">
+						<Title id="title02" text="Products"/>
+					</OverflowToolbar>
+				</t:extension>
+
+                <t:columns>
+                	<t:Column width="9rem">
+						<Label text="ProductID" />
+						<t:template>
+							<Text text="{product>ProductID}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="13rem">
+						<Label text="ProductName" />
+						<t:template>
+							<Text text="{product>ProductName}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="7rem">
+						<Label text="SupplierID" />
+						<t:template>
+							<Text text="{product>SupplierID}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="7rem">
+						<Label text="CategoryID" />
+						<t:template>
+							<Text text="{product>CategoryID}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="13rem">
+						<Label text="QuantityPerUnit" />
+						<t:template>
+							<Text text="{product>QuantityPerUnit}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="9em">
+						<Label text="UnitPrice" />
+						<t:template>
+							<Text text="{product>UnitPrice}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="9rem">
+						<Label text="UnitsInStock" />
+						<t:template>
+							<Text text="{product>UnitsInStock}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="9rem">
+						<Label text="UnitsOnOrder" />
+						<t:template>
+							<Text text="{product>UnitsOnOrder}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="9rem">
+						<Label text="ReorderLevel" />
+						<t:template>
+							<Text text="{product>ReorderLevel}"></Text>
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="9rem">
+						<Label text="Discontinued" />
+						<t:template>
+							<Text text="{
+                                path: 'product>Discontinued',
+                                formatter: '.formatFile.fnFormatter'
+                            }" />
+						</t:template>
+					</t:Column>
+
+                    <t:Column width="9rem">
+						<Label text="Status" />
+						<t:template>
+							<c:Icon src="{= ${product>UnitPrice} >= 15 ? 'sap-icon://thumb-up' : 'sap-icon://thumb-down'}" color="{= ${product>UnitPrice} >= 15 ? 'rgb(27,234,33)' : 'rgb(234,52,27)' }"></c:Icon>
+						</t:template>
+					</t:Column>
+
+                </t:columns>
+
+            </t:Table>
+        </content>
+
+        <buttons>
+            <Button text="close" press=".onClose" />
+        </buttons>
+
+    </Dialog>
+</c:FragmentDefinition>
+```
