Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -342,104 +342,129 @@ sap.ui.define([
 - fragment 파일
 ```html
 <c:FragmentDefinition 
-    xmlns="sap.m" 
-    xmlns:c="sap.ui.core"
-    xmlns:f="sap.ui.layout.form"
-    xmlns:t="sap.ui.table"
+    xmlns="sap.m"           <!-- sap.m: 모바일용 UI 컨트롤 -->
+    xmlns:c="sap.ui.core"   <!-- sap.ui.core: 기본 UI 컴포넌트 (Icon 등) -->
+    xmlns:f="sap.ui.layout.form"  <!-- (폼 레이아웃용 네임스페이스, 여기서는 사용 안 함) -->
+    xmlns:t="sap.ui.table"  <!-- sap.ui.table: 테이블 UI 컨트롤 -->
 >
-    <Dialog id="idDialog"
-            title="First Dialog"
-            contentHeight="20%"
-            contentWidth="80%"
-            draggable="true"
-            resizable="true">
+
+    <!-- 다이얼로그 정의 -->
+    <Dialog 
+        id="idDialog"               <!-- 다이얼로그 ID (컨트롤러에서 찾을 때 사용) -->
+        title="First Dialog"        <!-- 다이얼로그 제목 -->
+        contentHeight="20%"         <!-- 다이얼로그 세로 크기 -->
+        contentWidth="80%"          <!-- 다이얼로그 가로 크기 -->
+        draggable="true"            <!-- 드래그로 이동 가능 -->
+        resizable="true">           <!-- 크기 조절 가능 -->
+        
         <content>
-            <!-- Dialog 안에 들어갈 내용 작성 -->
-            <t:Table id="tb02" rows="{product>/Products}">
+            <!-- 다이얼로그 안에 표시될 실제 콘텐츠 영역 -->
+            
+            <!-- 제품 목록 테이블 -->
+            <t:Table id="tb02" rows="{product>/Products}"> <!-- product 모델의 Products 배열에 바인딩 -->
+                
+                <!-- 테이블 상단 제목 영역 -->
                 <t:extension>
 					<OverflowToolbar style="Clear">
-						<Title id="title02" text="Products"/>
+						<Title id="title02" text="Products"/> <!-- 테이블 제목 -->
 					</OverflowToolbar>
 				</t:extension>
 
+                <!-- 각 제품 속성을 표시할 컬럼들 정의 -->
                 <t:columns>
+
+                    <!-- ProductID 컬럼 -->
                 	<t:Column width="9rem">
-						<Label text="ProductID" />
+						<Label text="ProductID" /> <!-- 헤더 제목 -->
 						<t:template>
-							<Text text="{product>ProductID}"></Text>
+							<Text text="{product>ProductID}"/> <!-- 각 행의 ProductID 값 표시 -->
 						</t:template>
 					</t:Column>
 
+                    <!-- ProductName 컬럼 -->
                     <t:Column width="13rem">
 						<Label text="ProductName" />
 						<t:template>
-							<Text text="{product>ProductName}"></Text>
+							<Text text="{product>ProductName}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- SupplierID 컬럼 -->
                     <t:Column width="7rem">
 						<Label text="SupplierID" />
 						<t:template>
-							<Text text="{product>SupplierID}"></Text>
+							<Text text="{product>SupplierID}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- CategoryID 컬럼 -->
                     <t:Column width="7rem">
 						<Label text="CategoryID" />
 						<t:template>
-							<Text text="{product>CategoryID}"></Text>
+							<Text text="{product>CategoryID}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- QuantityPerUnit (단위당 수량) -->
                     <t:Column width="13rem">
 						<Label text="QuantityPerUnit" />
 						<t:template>
-							<Text text="{product>QuantityPerUnit}"></Text>
+							<Text text="{product>QuantityPerUnit}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- UnitPrice (단가) -->
                     <t:Column width="9em">
 						<Label text="UnitPrice" />
 						<t:template>
-							<Text text="{product>UnitPrice}"></Text>
+							<Text text="{product>UnitPrice}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- UnitsInStock (재고 수량) -->
                     <t:Column width="9rem">
 						<Label text="UnitsInStock" />
 						<t:template>
-							<Text text="{product>UnitsInStock}"></Text>
+							<Text text="{product>UnitsInStock}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- UnitsOnOrder (주문 중 수량) -->
                     <t:Column width="9rem">
 						<Label text="UnitsOnOrder" />
 						<t:template>
-							<Text text="{product>UnitsOnOrder}"></Text>
+							<Text text="{product>UnitsOnOrder}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- ReorderLevel (재주문 기준 수량) -->
                     <t:Column width="9rem">
 						<Label text="ReorderLevel" />
 						<t:template>
-							<Text text="{product>ReorderLevel}"></Text>
+							<Text text="{product>ReorderLevel}"/>
 						</t:template>
 					</t:Column>
 
+                    <!-- Discontinued (단종 여부) -->
                     <t:Column width="9rem">
 						<Label text="Discontinued" />
 						<t:template>
+							<!-- formatter 함수를 사용하여 표시 형식 제어 -->
 							<Text text="{
                                 path: 'product>Discontinued',
-                                formatter: '.formatFile.fnFormatter'
+                                formatter: '.formatFile.fnFormatter'  <!-- Controller의 formatter 함수 사용 -->
                             }" />
 						</t:template>
 					</t:Column>
 
+                    <!-- Status (상태 아이콘) -->
                     <t:Column width="9rem">
 						<Label text="Status" />
 						<t:template>
-							<c:Icon src="{= ${product>UnitPrice} >= 15 ? 'sap-icon://thumb-up' : 'sap-icon://thumb-down'}" color="{= ${product>UnitPrice} >= 15 ? 'rgb(27,234,33)' : 'rgb(234,52,27)' }"></c:Icon>
+                            <!-- UnitPrice(가격)이 15 이상이면 초록색 엄지 아이콘, 아니면 빨간색 아래 엄지 -->
+							<c:Icon 
+                                src="{= ${product>UnitPrice} >= 15 ? 'sap-icon://thumb-up' : 'sap-icon://thumb-down'}"
+                                color="{= ${product>UnitPrice} >= 15 ? 'rgb(27,234,33)' : 'rgb(234,52,27)' }"/>
 						</t:template>
 					</t:Column>
 
@@ -448,7 +473,9 @@ sap.ui.define([
             </t:Table>
         </content>
 
+        <!-- 다이얼로그 하단 버튼 영역 -->
         <buttons>
+            <!-- 닫기 버튼: 컨트롤러의 onClose 함수 실행 -->
             <Button text="close" press=".onClose" />
         </buttons>
 
