Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -226,74 +226,92 @@ sap.ui.define([], function() {
 - js 파일
 ```java
 sap.ui.define([
-    "sap/ui/core/mvc/Controller",
-    "sap/ui/model/json/JSONModel",
-    "sap/ui/core/Fragment",
-    "ycl2testproject02/model/formatter"
-
+    "sap/ui/core/mvc/Controller",      // MVC 컨트롤러
+    "sap/ui/model/json/JSONModel",     // JSON 모델 (데이터 저장용)
+    "sap/ui/core/Fragment",            // Fragment (다이얼로그 등 팝업용)
+    "ycl2testproject02/model/formatter" // 데이터 포맷터
 ], (Controller, JSONModel, Fragment, formatter) => {
     "use strict";
 
     return Controller.extend("ycl2testproject02.controller.Main", {
 
+        // 포맷터 파일 연결
         formatFile: formatter,
 
+        // 1️⃣ 초기 실행 시 모델 설정
         onInit() {
+            // 빈 배열을 가진 기본 데이터 준비
             let oData = { result: [] };
+            // JSON 모델 생성
             let oModel = new JSONModel(oData);
-
+            // 뷰(View)에 "list"라는 이름으로 모델 연결
             this.getView().setModel(oModel, "list");
         },
 
+        // 2️⃣ "Random" 버튼 클릭 시 실행
         onRandomPress() {
+            // Input 컨트롤 가져오기
             let oInput = this.getView().byId("inp01");
+            // 1~100 사이의 랜덤 숫자 생성
             let sValue = Math.floor(Math.random() * 100 + 1);
+            // 생성한 랜덤 숫자를 Input에 표시
             oInput.setValue(sValue);
 
+            // "list" 모델 가져오기
             let oModel = this.getView().getModel("list");
+            // result 배열 꺼내오기
             let arrCopy = oModel.getProperty("/result");
 
+            // 랜덤 값 배열에 추가
             arrCopy.push(sValue);
+            // 모델 업데이트
             oModel.setProperty("/result", arrCopy);
-
         },
 
+        // 3️⃣ Input 값 변경 시 실행 (유효성 검사)
         onValueChange: function(oEvent) {
+            // 이벤트 발생한 Input 객체
             let oInput = oEvent.getSource();
+            // 입력된 값 가져오기
             let iValue = oInput.getValue();
 
             let isValid = true;
 
-            if(iValue < 1 || iValue > 100  || isNaN(iValue) || iValue === "") {
+            // 1~100 사이가 아니거나, 숫자가 아닌 경우 에러
+            if (iValue < 1 || iValue > 100 || isNaN(iValue) || iValue === "") {
                 isValid = false;
             }
 
-            if(isValid) {
+            // 값이 유효하면 상태 정상으로
+            if (isValid) {
                 oInput.setValueState("None");
             } else {
+                // 잘못된 값이면 Input을 에러 상태로 표시
                 oInput.setValueState("Error");
             }
-
-
         },
 
+        // 4️⃣ "open Product" 버튼 클릭 시 다이얼로그 열기
         openProduct() {
+            let oThis = this; // this를 변수에 저장 (비동기 함수 안에서도 사용하기 위함)
 
-            let oThis = this;
-
+            // Fragment 로드 (XML로 정의된 다이얼로그)
             Fragment.load({
-                name: "ycl2testproject02.view.fragment.Products",
+                name: "ycl2testproject02.view.fragment.Products", // Fragment 파일 경로
                 type: "XML",
-                controller:this,
+                controller: this, // 컨트롤러 연결
             }).then(function(oDialog) {
+                // 모델 설정 (현재 뷰의 모델을 다이얼로그에 연결)
                 let oModel = oThis.getView().getModel();
                 oDialog.setModel(oModel, "product");
+                // 다이얼로그 열기
                 oDialog.open();
-            }); 
+            });
         },
 
+        // 5️⃣ 다이얼로그 닫기
         onClose() {
-            sap.ui.getCore().byId("idDialog").close();
+            sap.ui.getCore().byId("idDialog").close(); // idDialog로 등록된 다이얼로그 닫기
         }
     });
 });
@@ -302,28 +320,55 @@ sap.ui.define([
 
 - view.xml 파일
 ```html
-<mvc:View controllerName="ycl2testproject02.controller.Main"
+<mvc:View 
+    controllerName="ycl2testproject02.controller.Main"  <!-- 연결할 컨트롤러 -->
     xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m"
-    xmlns:t="sap.ui.table"
+    xmlns="sap.m"          <!-- sap.m: 모바일 UI 컨트롤 -->
+    xmlns:t="sap.ui.table" <!-- sap.ui.table: 표 컨트롤 -->
 >
-    <Page id="page" title="{i18n>title}">
-        <VBox id="box01" class="sapUiLargeMargin">
-            <Text id="txt01" text="버튼을 클릭하면 아래 Input 값이 랜덤으로 채워집니다"></Text>
-            <Input id="inp01" type="Number" change="onValueChange" placeholder="1부터 100까지 입력하세요" valueState="None" valueStateText="1부터 100 사이의 값만 입력할 수 있습니다." />
-            <Button id="btn01" text="Random" press="onRandomPress"></Button>
+    <!-- 메인 페이지 -->
+    <Page id="page" title="{i18n>title}"> <!-- i18n에서 다국어 제목 불러오기 -->
+        <VBox id="box01" class="sapUiLargeMargin"> <!-- 세로 정렬 박스 (여백 있음) -->
+            
+            <!-- 설명 문구 -->
+            <Text 
+                id="txt01" 
+                text="버튼을 클릭하면 아래 Input 값이 랜덤으로 채워집니다">
+            </Text>
 
-            <t:Table id="tb01" rows="{list>/result}">
+            <!-- 숫자 입력 필드 -->
+            <Input 
+                id="inp01" 
+                type="Number" 
+                change="onValueChange" <!-- 값 변경 시 유효성 검사 함수 호출 -->
+                placeholder="1부터 100까지 입력하세요" 
+                valueState="None" 
+                valueStateText="1부터 100 사이의 값만 입력할 수 있습니다." 
+            />
+
+            <!-- 랜덤 버튼 -->
+            <Button 
+                id="btn01" 
+                text="Random" 
+                press="onRandomPress"> <!-- 버튼 클릭 시 랜덤 숫자 생성 -->
+            </Button>
+
+            <!-- 랜덤 숫자 목록을 표시할 테이블 -->
+            <t:Table id="tb01" rows="{list>/result}"> <!-- list 모델의 result 배열과 바인딩 -->
+                
+                <!-- 테이블 상단 툴바 -->
                 <t:extension>
 					<OverflowToolbar style="Clear">
-						<Title id="title01" text="랜덤 목록 리스트"/>
+						<Title id="title01" text="랜덤 목록 리스트"/> <!-- 제목 -->
 					</OverflowToolbar>
 				</t:extension>
 
+                <!-- 테이블 컬럼 정의 -->
                 <t:columns>
                 	<t:Column width="11rem">
-						<Label text="value" />
+						<Label text="value" /> <!-- 컬럼 헤더 -->
 						<t:template>
+							<!-- 배열 안의 각 숫자 값 표시 -->
 							<Text text="{list>}"></Text>
 						</t:template>
 					</t:Column>
@@ -331,7 +376,12 @@ sap.ui.define([
 
             </t:Table>
 
-            <Button id="btn02" text="open Product" press="openProduct"></Button>
+            <!-- 제품 보기 다이얼로그 열기 버튼 -->
+            <Button 
+                id="btn02" 
+                text="open Product" 
+                press="openProduct">
+            </Button>
 
         </VBox>
     </Page>
