Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -1,4 +1,8 @@
 # 실습 코드 (푼거)
+<img width="701" height="339" alt="image" src="https://github.com/user-attachments/assets/96406e8a-b9f4-4783-b5af-98da13c8e015" />
+
+<img width="697" height="316" alt="image" src="https://github.com/user-attachments/assets/b032d6e6-3ea1-41a1-a84f-99bc0bb63e14" />
+
 
 - Main.controller.js
 ```java
