--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -1,8 +1,13 @@
 # 실습 코드 (푼거)
+- SAPUI5 애플리케이션에서 랜덤 숫자를 생성해 화면에 표시하고, 제품 목록을 다이얼로그(Fragment)로 띄워 보여주는 예제
 <img width="701" height="339" alt="image" src="https://github.com/user-attachments/assets/96406e8a-b9f4-4783-b5af-98da13c8e015" />
+</br>
+</br>
 
 <img width="697" height="316" alt="image" src="https://github.com/user-attachments/assets/b032d6e6-3ea1-41a1-a84f-99bc0bb63e14" />
-
+</br>
+</br>
+</br>
 
 - Main.controller.js
 ```java
