Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -49,6 +49,43 @@ https://port8081-workspaces-ws-kzwp3.us10.trial.applicationstudio.cloud.sap/nort
 - `<DynamicPage>`의 `<content>` 영역에는 하나의 컨텐츠만 들어갈 수 있음
 - 여러 UI 요소(Button, Table 등)를 함께 넣고 싶다면 `<VBox>`로 감싸서 하나의 컨텐츠로 구성해야 함
 </br>
+</br>
+
+### getOwnerComponent()
+- 컨트롤러가 속한 앱(Component)을 가져옴.
+- getView()는 현재 컨트롤러의 뷰, getOwnerComponent()는 앱 전체를 가져옴
+```java
+let oModel = this.getOwnerComponent().getModel(); // 기본 OData 모델 가져오기
+```
+</br>
+
+### oModel.read()
+- OData 서버에서 데이터를 조회(read)함
+- 단 건 조회: 하나의 레코드 조회 시 `oReturn`에 바로 객체로 데이터가 들어옴.
+- 다 건 조회: 여러 레코드 조회 시 `oReturn.results` 배열 안에 객체들이 들어 있음.
+```java
+oModel.read("EntitySet", {
+    filters: [oFilter],            // 조건
+    urlParameters: { "$expand": "Relation" }, // 관련 데이터 확장
+    success: function(oData) {},   // 조회 성공 시 실행
+    error: function(oError) {}     // 조회 실패 시 실행
+});
+```
+```java
+let oFilter = new sap.ui.model.Filter("Price", sap.ui.model.FilterOperator.LT, 100);
+
+oModel.read("/Products", {
+    filters: [oFilter],
+    success: function(oData) {
+        console.log("100원 이하 제품:", oData.results);
+    },
+    error: function(oError) {
+        console.error("데이터 조회 실패!", oError);
+    }
+});
+```
+</br>
+
 
 ```java
 "routes": [
