Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -72,16 +72,41 @@ oModel.read("EntitySet", {
 });
 ```
 ```java
-let oFilter = new sap.ui.model.Filter("Price", sap.ui.model.FilterOperator.LT, 100);
+let oLocalModel = this.getView().getModel("local");
+let oModel = this.getOwnerComponent().getModel();   // OData Model. 이름없는 기본모델
+let oFilter = new Filter({
+    path : "ProductID",
+    operator : "BT",
+    value1 : 10,
+    value2 : 20
+});
 
+// .create() 생성 .read() 조회 .update() 업데이트 .remove() 삭제 
+// oModel.read("경로", {});
 oModel.read("/Products", {
-    filters: [oFilter],
-    success: function(oData) {
-        console.log("100원 이하 제품:", oData.results);
+    urlParameters: {
+        "$expand" : "Supplier"
     },
-    error: function(oError) {
-        console.error("데이터 조회 실패!", oError);
-    }
+    filters: [oFilter],
+    // sorters: [],
+    success: function(oReturn) {
+        // 단 건 조회 : oReturn 자체에 데이터가 들어옴
+        // 다 건 조회 : oReturn.results 해서 배열 접근
+
+        // oLocalModel.setProperty("경로", 세팅할데이터);
+        let oData = [];
+        for(let i=0; i<oReturn.results.length; i++) {
+            let item = oReturn.results[i];
+            oData.push({
+                ProductID: item.ProductID,
+                ProductName: item.ProductName,
+                SupplierID: item.SupplierID,
+                UnitsInStock: item.UnitsInStock
+            });
+        }
+        oLocalModel.setProperty("/results", oData);
+    },
+    error: function() {}
 });
 ```
 </br>
