--- a/HTML_Javascript/실습 13.md
+++ b/HTML_Javascript/실습 13.md
@@ -1,2 +1,2 @@
-### OData read()로 필터링된 제품 데이터를 JSON 모델에 담아 테이블에 표시
+### 버튼 클릭 시 OData read()로 필터링된 제품 데이터를 테이블에 표시
 - 버튼 클릭 시 onPress 함수에서 OData read()를 사용해 제품 데이터를 가져와 JSON 모델에 담고, DynamicPage와 FilterBar로 필터링 후 테이블에 표시하는 SAPUI5 화면
