Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -111,6 +111,30 @@ oModel.read("/Products", {
 ```
 </br>
 
+### OData URL
+- 전체 엔티티 조회: `/Products?$`
+- 특정 엔티티 조회 + JSON + 확장: `/Products(1)?$format=json&$expand=Supplier`
+- 복합 키 조회: `/EntitySet(key1=값,key2=값)`
+- 단일 키 조회: `/EntitySet(key1=값)` 또는 `/EntitySet(값)`
+</br>
+
+### 뷰(View)와 라우터(Router)
+- 애플리케이션 시작 → RootView (App.view.xml) 실행
+- 라우터 역할 → URL 관리, 기본 URL → Main.view.xml
+- 라우터 구성: config → 라우터 정의, routes → 라우터 객체 생성, targets → 화면 출력 위치 지정
+</br>
+
+### 라우터 파라미터
+- URL 형식: `"detail/{필수파라미터}/:옵션파라미터:"`
+- 주의: 라우터를 2개 이상 만들면 첫 번째 라우터만 적용됨 → 명확히 구분 필요
+</br>
+
+### 화면 전환 애니메이션
+- 지원 애니메이션: `slide`(기본), `flip`, `show`, `fade`
+</br>
+
+
+
 
 ```java
 "routes": [
