Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -124,7 +124,7 @@ oModel.read("/Products", {
 - 라우터 구성: config → 라우터 정의, routes → 라우터 객체 생성, targets → 화면 출력 위치 지정
 </br>
 
-## 라우터 파라미터
+### 라우터 파라미터
 - URL 형식: `"detail/{필수파라미터}/:옵션파라미터:"`
 - 주의: 라우터를 2개 이상 만들면 첫 번째 라우터만 적용됨 → 명확히 구분 필요
 </br>
@@ -132,8 +132,9 @@ oModel.read("/Products", {
 ### 화면 전환 애니메이션
 - 지원 애니메이션: `slide`(기본), `flip`, `show`, `fade`
 </br>
+</br>
 
-### < 라우터 선언 >
+## < 라우터 선언 >
 
 ### 1) manifest.json 파일
 
