Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -137,7 +137,35 @@ oModel.read("/Products", {
 ## < 라우터 선언 >
 
 ### 1) manifest.json 파일
-
+- `manifest.json`에서 라우터는 `sap.ui5.routing` 안에 선언
+- `config` → 라우터 기본 설정
+- `routes` → URL 패턴과 라우터 이름
+- `targets` → 어떤 뷰(View)를 보여줄지 연결
+```java
+"sap.ui5": {
+    "routing": {
+        "config": { ... },
+        "routes": [ ... ],
+        "targets": { ... }
+    }
+}
+```
+- routes 선언 형식
+- `name` → navTo에서 사용할 라우터 이름
+- `pattern` → 브라우저 URL 경로
+  - {param} → 필수 파라미터
+  - :param: → 선택 파라미터
+- `target` → 연결할 targets ID 배열 (1개 이상 가능)
+```java
+"routes": [
+    {
+        "name": "<라우터 이름>",
+        "pattern": "<URL 패턴>",
+        "target": ["<타겟 ID>"]
+    },
+    ...
+]
+```
 
 ```java
 "routes": [
