Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -167,6 +167,20 @@ oModel.read("/Products", {
 ]
 ```
 
+- targets 선언 형식
+- `id` → 뷰의 고유 ID, 화면 전환 시 참조 가능
+- `name` → 실제 XML 뷰 파일 이름
+```java
+"targets": {
+    "<타겟 ID>": {
+        "id": "<뷰 컨트롤 ID>",
+        "name": "<뷰 파일 이름>"
+    },
+    ...
+}
+```
+
+
 ```java
 "routes": [
         {
