Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -182,21 +182,43 @@ oModel.read("/Products", {
 
 
 ```java
-"routes": [
-        {
-          "name": "RouteMain",      // 이름 마음대로 지정
-          "pattern": ":?query:",
-          "target": [
-            "TargetMain"
-          ]
-        }
-      ]
-
-
-      "targets": {
-        "TargetMain": {
-          "id": "Main",      // view의 id. 생략가능.
-          "name": "Main"      // 파일명. 오타나면 화면에 출력 x
-        }
-      }
+"routing": {
+   "config": {
+     "routerClass": "sap.m.routing.Router",
+     "controlAggregation": "pages",
+     "controlId": "app",
+     "transition": "slide",
+     "type": "View",
+     "viewType": "XML",
+     "path": "ycl2project10.view",
+     "async": true,
+     "viewPath": "ycl2project10.view"
+   },
+   "routes": [
+     {
+       "name": "RouteMain",
+       "pattern": "",
+       "target": [
+         "TargetMain"
+       ]
+     },
+     {
+       "name": "RouteDetail",
+       "pattern": "detail/{param1}/:param2:",
+       "target": [
+         "TargetDetail"
+       ]
+     }
+   ],
+   "targets": {
+     "TargetMain": {
+       "id": "Main",
+       "name": "Main"
+     },
+     "TargetDetail": {
+       "id": "Detail",
+       "name": "Detail"
+     }
+   }
+ }
 ```
