Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -223,3 +223,30 @@ oModel.read("/Products", {
    }
  }
 ```
+</br>
+
+### 1) view.xml 파일
+- Main.view.xml 파일
+- showNavButton="true" → 상단 왼쪽에 뒤로가기 버튼 표시
+- navButtonPress="onNavButtonPress" → 뒤로가기 버튼 클릭 시 실행될 함수 지정
+```html
+<mvc:View controllerName="ycl2project10.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text text="Main page" />
+        <Button text="화면 이동" press="onPress" />
+    </Page>
+</mvc:View>
+```
+
+- Detail.view.xml 파일
+```html
+<mvc:View controllerName="ycl2project10.controller.Detail"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idText" text="Detail page" />
+    </Page>
+</mvc:View>
+```
