Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -225,7 +225,7 @@ oModel.read("/Products", {
 ```
 </br>
 
-### 1) view.xml 파일
+### 2) view.xml 파일
 - Main.view.xml 파일
 - showNavButton="true" → 상단 왼쪽에 뒤로가기 버튼 표시
 - navButtonPress="onNavButtonPress" → 뒤로가기 버튼 클릭 시 실행될 함수 지정
@@ -250,3 +250,59 @@ oModel.read("/Products", {
     </Page>
 </mvc:View>
 ```
+</br>
+
+### 3) controller.js 파일
+</br>
+
+### getRouter()
+- 현재 Component에서 사용하는 Router 객체 전체를 가져옴
+- Router 전체를 가져와서 `navTo`, `getRoute` 등 메서드를 사용 가능
+```java
+let oRouter = this.getOwnerComponent().getRouter();
+oRouter.navTo("RouteDetail", { param1: "hihi" });
+```
+</br>
+
+### getRoute(routeName)
+- Router 안에서 특정 Route 객체 하나를 가져옴
+- 해당 라우트의 URL 패턴 매칭 이벤트 처리 등
+```java
+let oRoute = this.getOwnerComponent().getRouter().getRoute("RouteDetail");
+oRoute.attachPatternMatched(this._onMatched, this);
+```
+</br>
+
+### navTo
+- 다른 화면(Route)으로 이동
+```java
+router.navTo(routeName, parameters?, replace?);
+```
+- `routeName`: 이동할 라우트 이름
+- `parameters`: URL에 전달할 파라미터 {param1: "값", param2: "값"}
+- `replace`: true → 히스토리 초기화, false → 뒤로가기 유지
+```java
+let oRouter = this.getOwnerComponent().getRouter();
+oRouter.navTo("RouteDetail", { param1: "hihi", param2: "okok" }, false);
+```
+- `/detail/hihi/okok` 화면으로 이동, 뒤로가기 가능
+
+</br>
+
+### attachPatternMatched
+- URL 패턴과 일치할 때 특정 함수 실행
+```java
+route.attachPatternMatched(handlerFunction, context?);
+```
+- `handlerFunction`: URL이 패턴과 맞을 때 실행할 함수
+- `context`: 함수 내부에서 this 바인딩
+```java
+oRouter.getRoute("RouteDetail")
+       .attachPatternMatched(this._onPatternMatched, this);
+
+_onPatternMatched: function(oEvent) {
+    let param1 = oEvent.getParameter("arguments").param1;
+    this.byId("idText").setText(param1);
+}
+```
+- `/detail/hihi`로 이동하면 `_onPatternMatched` 실행, 화면에 `"hihi"` 표시
