Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -291,6 +291,7 @@ oRouter.navTo("RouteDetail", { param1: "hihi", param2: "okok" }, false);
 
 ### attachPatternMatched
 - URL 패턴과 일치할 때 특정 함수 실행
+- `onInit` → 컨트롤러 최초 생성 시 1번 실행, `attachPatternMatched` → URL 패턴 매칭될 때마다 실행
 ```java
 route.attachPatternMatched(handlerFunction, context?);
 ```
