--- a/HTML_Javascript/실습 14.md
+++ b/HTML_Javascript/실습 14.md
@@ -1,3 +1,5 @@
+
+- 뒤로가기 가능
 <img width="418" height="188" alt="image" src="https://github.com/user-attachments/assets/6ff00437-2c2c-41fd-bb9e-e67573481034" />
 
 </br>
