Update and rename 실습 14.md to 실습 14 (라우팅).md

--- a/HTML_Javascript/실습 14 (라우팅).md
+++ b/HTML_Javascript/실습 14 (라우팅).md
@@ -1,4 +1,5 @@
-
+### SAPUI5 라우팅을 이용한 화면 이동 (Main → Detail)
+- manifest.json의 routing 설정을 통해 Main 화면에서 버튼 클릭 시 navTo()로 Detail 화면으로 이동하며, URL 파라미터를 전달하고 attachPatternMatched()로 해당 값을 수신해 Text에 표시하는 예제임
 - 뒤로가기 가능
 <img width="418" height="188" alt="image" src="https://github.com/user-attachments/assets/6ff00437-2c2c-41fd-bb9e-e67573481034" />
 
