Update 실습 14 (라우팅).md

--- a/HTML_Javascript/실습 14 (라우팅).md
+++ b/HTML_Javascript/실습 14 (라우팅).md
@@ -140,3 +140,4 @@ sap.ui.define([
 ---
 
 ### 라우팅 파라미터를 이용한 Detail→Main 화면 복귀
+- 기존 코드가 Main→Detail 이동만 했다면, 이번 코드는 Detail 화면의 NavButton 클릭 시 mainParam("comeback main view")을 전달해 Main 화면으로 돌아오며 그 값을 표시하도록 확장한 버전
