--- a/HTML_Javascript/실습 14 (라우팅).md
+++ b/HTML_Javascript/실습 14 (라우팅).md
@@ -141,3 +141,21 @@ sap.ui.define([
 
 ### 라우팅 파라미터를 이용한 Detail→Main 화면 복귀
 - 기존 코드가 Main→Detail 이동만 했다면, 이번 코드는 Detail 화면의 NavButton 클릭 시 mainParam("comeback main view")을 전달해 Main 화면으로 돌아오며 그 값을 표시하도록 확장한 버전
+</br>
+
+- manifest.json
+- "pattern": ":mainParam:" 으로 바꿔야 라우터가 파라미터가 있어도 되고 없어도 되는 Route로 인식해서 첫 진입(기본 Main)과 파라미터 이동(Detail→Main) 모두 정상 작동함
+```java
+"routes": [
+  {
+    "name": "RouteMain",
+    "pattern": ":mainParam:",    // 콜론(:)으로 감싸면 optional parameter
+    "target": ["TargetMain"]
+  },
+  {
+    "name": "RouteDetail",
+    "pattern": "detail/{param1}/:param2:",
+    "target": ["TargetDetail"]
+  }
+]
+```
